Updated template